# OptimizingBFInterpreter

./: LICENSE  OptimizingBFInterpreter.cabal  README.md  stack.yaml
src/: Main.hs  Util.hs
src/Data/: Interpreter.hs  Machine.hs
src/Text/: Parser.hs
