name:                OptimizingBFInterpreter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/peterjayandrew/OptimizingBFInterpreter#readme
license:             BSD3
license-file:        LICENSE
author:              Lemma Andrew
maintainer:          lemmajandrew@gmail.com
copyright:           MIT
category:            Compilers/Interpreters
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable OptimizingBFInterpreter
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Data.Interpreter
                     , Data.Machine
                     , Text.Parser
                     , Util
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 9.2
                     , primitive >= 0.7.3.0
                     , vector >= 0.12
